--- a/ReaderAndRenamer.vcxproj
+++ b/ReaderAndRenamer.vcxproj
@@ -127,7 +127,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Src\Main.cpp" />
+    <ClCompile Include="Vendor\Includes\deleteMe.cpp" />
+    <ClCompile Include="Vendor\Libs\deleteMe.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Src\Core\Core.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
